--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,14 @@
 
     <string name="action_settings">Settings</string>
 
+    <!-- Today exercise left menu options -->
+    <string name="leftMenuTodayAddSerie">Agregar serie</string>
+    <string name="leftMenuTodayViewTotals">Ver totales</string>
+    <string name="leftMenuTodayRawData">Ver data</string>
+    <string name="leftMenuRetentions">Retentions</string>
+
+    <!-- ///////////////////////////////////////////////////////////////////////////// -->
+    <!-- Things related to the add serie option -->
     <!-- String used when the user is going to load a new serie with information -->
     <string name="addSerieDistance">Distancia</string>
     <string name="addSerieArrowsAmount">Cantidad de flechas</string>
@@ -16,14 +24,45 @@
     <string name="addSerieArrowsAmountTableHeader"># de flechas</string>
     <string name="addSerieTodayTotals">Totales de hoy</string>
 
-    <!-- Today exercise left menu options -->
-    <string name="leftMenuTodayAddSerie">Agregar serie</string>
-    <string name="leftMenuTodayViewTotals">Ver totales</string>
-    <string name="leftMenuTodayRawData">Ver data</string>
+
 
     <!-- Today totals data -->
     <string name="todayDataTotalSeries"># de series</string>
 
     <!-- Today raw data -->
     <string name="todayRawDataDelete">Borrar</string>
+
+    <!-- ///////////////////////////////////////////////////////////////////////////// -->
+    <!-- Different texts used on the retentions window -->
+
+    <string name="seriesAmount">Cantidad de series</string>
+    <string name="repetitionsAmount">Cantidad de repeticiones</string>
+    <string name="repetitionsDuration">Duracion de cada repeticion</string>
+    <string name="seriesSleepTime">Descanso entre series</string>
+    <string name="startIn">Empezar en</string>
+    <string name="buttonStart">Empezar</string>
+    <string name="requiredValue">Requerido</string>
+    <!-- Text usados en la pantalla de cuando empieza todo -->
+    <string name="button_stop">Parar</string>
+    <string name="wait_time">Tiempo de descanso</string>
+    <string name="currentSerie">Serie actual</string>
+    <string name="currentRepetition">Repeticion actual</string>
+    <string name="totalSeries">Series totales</string>
+    <string name="totalRepetitions">Repeticiones totales</string>
+    <string name="status">Estado</string>
+
+    <!-- Differentes estados en el que se puede encontrar la applicacion -->
+    <string name="runningStatus">Arco abierto</string>
+    <string name="restStatus">Descansando</string>
+    <string name="stoppedStatus">Paro</string>
+    <string name="finishedStatus">Termino</string>
+    <string name="waitingToStart">Esperando...</string>
+
+    <!-- Notifications between the excersie -->
+    <string name="finishedSerie">Termino serie</string>
+    <string name="downBow">Abajo</string>
+    <string name="upBow">Arriba</string>
+
+
+
 </resources>
