ISSUE-16: Add logic to add view/create series

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,6 @@
         series sean necesarias y que cada serie tenga mas o menos flechas que en un torneo oficial
     </string>
 
-
+    <string name="tournament_serie_index">Serie</string>
 
 </resources>
