ISSUE-20: Solve issues when creating tournament information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,7 @@
     </string>
 
     <string name="tournament_serie_index">Serie</string>
+    <string name="tournament_serie_next">Siguente</string>
+    <string name="tournament_serie_previous">Anterior</string>
 
 </resources>
