--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,94 +7,94 @@
     <string name="action_settings">Settings</string>
 
     <!-- Today exercise left menu options -->
-    <string name="leftMenuTodayAddSerie">Agregar serie</string>
-    <string name="leftMenuTodayViewTotals">Ver totales</string>
-    <string name="leftMenuTodayRawData">Ver data</string>
+    <string name="leftMenuTodayAddSerie">Add serie</string>
+    <string name="leftMenuTodayViewTotals">See totals</string>
+    <string name="leftMenuTodayRawData">Raw data</string>
     <string name="leftMenuRetentions">Retentions</string>
-    <string name="leftMenuTournament">Torneo</string>
+    <string name="leftMenuTournament">Tournament</string>
 
     <!-- ////////////////////////////////////////////////////////////////////////// -->
-    <string name="commonRequiredValidationError">Requerido</string>
-    <string name="commonDelete">commonDelete</string>
-    <string name="common_confirmation_dialog_title">Confirmación</string>
+    <string name="commonRequiredValidationError">Required</string>
+    <string name="commonDelete">Delete</string>
+    <string name="common_confirmation_dialog_title">Confirmation</string>
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Things related to the add serie option -->
     <!-- String used when the user is going to load a new serie with information -->
-    <string name="addSerieDistance">Distancia</string>
-    <string name="addSerieArrowsAmount">Cantidad de flechas</string>
-    <string name="addSerieAdd">Agregar</string>
-    <string name="addSerieLastSerie">Totales de hoy</string>
+    <string name="addSerieDistance">Distance</string>
+    <string name="addSerieArrowsAmount">Arrows amount</string>
+    <string name="addSerieAdd">Add</string>
+    <string name="addSerieLastSerie">Today total</string>
 
-    <string name="addSerieDatetime">Cuando</string>
-    <string name="addSerieArrowsAmountTableHeader"># de flechas</string>
-    <string name="addSerieTodayTotals">Totales de hoy</string>
+    <string name="addSerieDatetime">When</string>
+    <string name="addSerieArrowsAmountTableHeader"># Arrows</string>
+    <string name="addSerieTodayTotals">Today totals</string>
 
 
 
     <!-- Today totals data -->
-    <string name="todayDataTotalSeries"># de series</string>
+    <string name="todayDataTotalSeries">Series #</string>
 
     <!-- Today raw data -->
-    <string name="todayRawDataDelete">Borrar</string>
+    <string name="todayRawDataDelete">Delete</string>
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Different texts used on the retentions window -->
 
-    <string name="seriesAmount">Cantidad de series</string>
-    <string name="repetitionsAmount">Cantidad de repeticiones</string>
-    <string name="repetitionsDuration">Duracion de cada repeticion</string>
-    <string name="seriesSleepTime">Descanso entre series</string>
-    <string name="startIn">Empezar en</string>
-    <string name="buttonStart">Empezar</string>
+    <string name="seriesAmount">Series amount</string>
+    <string name="repetitionsAmount">Number of repetitions</string>
+    <string name="repetitionsDuration">Repetition duration</string>
+    <string name="seriesSleepTime">Rest during repetition</string>
+    <string name="startIn">Start in</string>
+    <string name="buttonStart">Start</string>
 
     <!-- Text usados en la pantalla de cuando empieza todo -->
-    <string name="button_stop">Parar</string>
-    <string name="wait_time">Tiempo de descanso</string>
-    <string name="serieInfo">Serie actual</string>
-    <string name="repetitionsInfo">Repeticion actual</string>
-    <string name="status">Estado</string>
+    <string name="button_stop">Stop</string>
+    <string name="wait_time">Resting time</string>
+    <string name="serieInfo">Current serie</string>
+    <string name="repetitionsInfo">Current repetition</string>
+    <string name="status">Status</string>
 
     <!-- Differentes estados en el que se puede encontrar la applicacion -->
-    <string name="runningStatus">Arco abierto</string>
-    <string name="restStatus">Descansando</string>
-    <string name="stoppedStatus">Paro</string>
-    <string name="finishedStatus">Termino</string>
-    <string name="waitingToStart">Esperando...</string>
+    <string name="runningStatus">Open bow</string>
+    <string name="restStatus">Resting</string>
+    <string name="stoppedStatus">Stop</string>
+    <string name="finishedStatus">Finished</string>
+    <string name="waitingToStart">Waiting...</string>
 
     <!-- Notifications between the excersie -->
-    <string name="finishedSerie">Termino serie</string>
-    <string name="downBow">Abajo</string>
-    <string name="upBow">Arriba</string>
+    <string name="finishedSerie">Finished serie</string>
+    <string name="downBow">Down</string>
+    <string name="upBow">Up</string>
 
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- View existing tournaments information -->
-    <string name="tournament_name">Nombre</string>
-    <string name="tournament_datetime">Cuando</string>
-    <string name="tournament_delete">Borrar</string>
-    <string name="tournament_start">Empezar</string>
-    <string name="tournament_stop">Terminar</string>
+    <string name="tournament_name">Name</string>
+    <string name="tournament_datetime">When</string>
+    <string name="tournament_delete">Delete</string>
+    <string name="tournament_start">Start</string>
+    <string name="tournament_stop">End</string>
 
-    <string name="tournament_distance">Distancia</string>
-    <string name="tournament_default_name">Entrenamiento</string>
-    <string name="tournament_target_size">Tamaño del blanco</string>
-    <string name="tournament_is_outdoor">¿Es outdoor?</string>
-    <string name="tournament_is_tournament">¿Es torneo?</string>
+    <string name="tournament_distance">Distance</string>
+    <string name="tournament_default_name">Training</string>
+    <string name="tournament_target_size">Target size</string>
+    <string name="tournament_is_outdoor">Is outdoor?</string>
+    <string name="tournament_is_tournament">Is tournament?</string>
 
 
 
     <string name="tournament_serie_index">Serie</string>
     <string name="tournament_serie_current_serie">Serie %1$d</string>
-    <string name="tournament_serie_current_round">Ronda %1$d</string>
-    <string name="tournament_serie_next">Siguente</string>
-    <string name="tournament_serie_previous">Anterior</string>
-    <string name="tournament_serie_end">Terminar</string>
+    <string name="tournament_serie_current_round">Round %1$d</string>
+    <string name="tournament_serie_next">Next</string>
+    <string name="tournament_serie_previous">Previous</string>
+    <string name="tournament_serie_end">End</string>
     <string name="tournament_serie_showing_series">Serie %1$d to %2$d</string>
-    <string name="tournament_confirm_delete_tournament">¿Queres borrar este torneo?</string>
-    <string name="tournament_view_all_impacts">Ver todos los impactos</string>
-    <string name="tournament_view_score_sheet">Ver planilla</string>
-    <string name="tournament_view_tournament_delete">Borrar</string>
-    <string name="tournament_view_serie_creating_back">Si vas para atras vas a borrar la serie incompleta. ¿Estas seguro?</string>
+    <string name="tournament_confirm_delete_tournament">Do you want to delete this tournament?</string>
+    <string name="tournament_view_all_impacts">View all impacts</string>
+    <string name="tournament_view_score_sheet">View score sheet</string>
+    <string name="tournament_view_tournament_delete">Deleter</string>
+    <string name="tournament_view_serie_creating_back">If you got back this incomplete serie is going to be deleted. Are you sure?</string>
 
 </resources>
