--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,7 @@
     <string name="leftMenuTodayAddSerie">Agregar serie</string>
     <string name="leftMenuTodayViewTotals">Ver totales</string>
     <string name="leftMenuTodayRawData">Ver data</string>
-    <string name="leftMenuRetentions">Retentions</string>
+    <string name="leftMenuRetentions">Retenciones</string>
     <string name="leftMenuTournament">Torneo</string>
 
     <!-- ////////////////////////////////////////////////////////////////////////// -->
