--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,17 @@
     <string name="tournament_confirm_delete_tournament">Do you want to delete this tournament?</string>
     <string name="tournament_view_all_impacts">View all impacts</string>
     <string name="tournament_view_score_sheet">View score sheet</string>
-    <string name="tournament_view_tournament_delete">Deleter</string>
+    <string name="tournament_view_arrow_stats">View stats</string>
+    <string name="tournament_view_tournament_delete">Delete</string>
     <string name="tournament_view_serie_creating_back">If you got back this incomplete serie is going to be deleted. Are you sure?</string>
+    <string name="tournament_view_stats_arrow_chart_description"># of arrows per score</string>
+    <string name="tournament_view_stats_series_chart_description">Score per serie</string>
+    <string name="tournament_view_stats_serie">Serie</string>
+    <string name="tournament_view_stats_arrow">Arrow</string>
+    <string name="tournament_view_stats_datatype">Data</string>
+    <string name="tournament_view_stats_min">Min</string>
+    <string name="tournament_view_stats_avg">Avg</string>
+    <string name="tournament_view_stats_mean">Media</string>
+    <string name="tournament_view_stats_max">Max</string>
 
 </resources>
