--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,14 @@
     <string name="tournament_view_stats_mean">Media</string>
     <string name="tournament_view_stats_max">Max</string>
 
+
+    <!-- ///////////////////////////////////////////////////////////////////////////// -->
+    <!-- Computer playoff option -->
+
+    <string name="playoff">Playoff</string>
+    <string name="playoff_distance">Distance</string>
+    <string name="playoff_min_score">Min serie score</string>
+    <string name="playoff_max_score">Max serie score</string>
+    <string name="playoff_computer_name">Computer</string>
+    <string name="playoff_start">Start</string>
 </resources>
