--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,12 +109,14 @@
 
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
-    <!-- Computer playoff option -->
+    <!-- Playoff option -->
 
     <string name="playoff">Playoff</string>
     <string name="playoff_distance">Distance</string>
     <string name="playoff_min_score">Min serie score</string>
     <string name="playoff_max_score">Max serie score</string>
     <string name="playoff_computer_name">Computer</string>
+    <string name="playoff_confirm_delete_playoff">Do you want to delete this playoff?</string>
     <string name="playoff_start">Start</string>
+    <string name="playoff_serie_score">%1$d - %2$d</string>
 </resources>
