--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,6 @@
     <string name="playoff_confirm_delete_playoff">Do you want to delete this playoff?</string>
     <string name="playoff_start">Start</string>
     <string name="playoff_serie_score">%1$d - %2$d</string>
+    <string name="playoff_error_creating_max_value_30">The value should be 30 or smaller</string>
+    <string name="playoff_error_creating_min_greater_max">The min value shoudl be smaller or equal than the max</string>
 </resources>
