--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -90,6 +90,7 @@
     <string name="tournament_serie_current_round">Ronda %1$d</string>
     <string name="tournament_serie_next">Siguente</string>
     <string name="tournament_serie_previous">Anterior</string>
+    <string name="tournament_serie_undo">Deshacer</string>
     <string name="tournament_serie_end">Terminar</string>
     <string name="tournament_serie_showing_series">Serie %1$d to %2$d</string>
     <string name="tournament_confirm_delete_tournament">¿Queres borrar este torneo?</string>
