--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="tournament_serie_current_round">Round %1$d</string>
     <string name="tournament_serie_next">Next</string>
     <string name="tournament_serie_previous">Previous</string>
+    <string name="tournament_serie_undo">Undo</string>
     <string name="tournament_serie_end">End</string>
     <string name="tournament_serie_showing_series">Serie %1$d to %2$d</string>
     <string name="tournament_confirm_delete_tournament">Do you want to delete this tournament?</string>
