--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,5 +127,9 @@
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Bow option -->
     <string name="bow">Bow</string>
+    <string name="bow_name">Name</string>
+    <string name="bow_add_sight_value">Add new sight value</string>
+    <string name="bow_save">Save</string>
+    <string name="bow_distance">Distance</string>
 
 </resources>
