--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,5 +131,7 @@
     <string name="bow_add_sight_value">Add new sight value</string>
     <string name="bow_save">Save</string>
     <string name="bow_distance">Distance</string>
+    <string name="bow_distance_delete">Delete</string>
+    <string name="bow_sight_value">Sight value</string>
 
 </resources>
