--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="action_settings">Settings</string>
 
     <!-- Today exercise left menu options -->
-    <string name="leftMenuTodayAddSerie">Add serie</string>
-    <string name="leftMenuTodayViewTotals">See totals</string>
+
+
     <string name="leftMenuTodayRawData">Raw data</string>
     <string name="leftMenuRetentions">Retentions</string>
     <string name="leftMenuTournament">Tournament</string>
@@ -21,6 +21,13 @@
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Things related to the add serie option -->
     <!-- String used when the user is going to load a new serie with information -->
+    <string name="series">Series</string>
+    <string name="series_get_today_totals">See Todays Data</string>
+    <string name="series_get_current_week_totals">See current week Data</string>
+    <string name="series_get_current_month_totals">See current month Data</string>
+
+    <string name="series_today_totals_chart_description"># of arrows per distance</string>
+
     <string name="addSerieDistance">Distance</string>
     <string name="addSerieArrowsAmount">Arrows amount</string>
     <string name="addSerieAdd">Add</string>
@@ -133,5 +140,7 @@
     <string name="bow_distance">Distance</string>
     <string name="bow_distance_delete">Delete</string>
     <string name="bow_sight_value">Sight value</string>
+
+
 
 </resources>
