--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuracion</string>
 
     <!-- Today exercise left menu options -->
     <string name="leftMenuTodayRawData">Ver data</string>
@@ -13,7 +13,7 @@
 
     <!-- ////////////////////////////////////////////////////////////////////////// -->
     <string name="commonRequiredValidationError">Requerido</string>
-    <string name="commonDelete">commonDelete</string>
+    <string name="commonDelete">Borrar</string>
     <string name="common_confirmation_dialog_title">Confirmación</string>
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
@@ -119,7 +119,7 @@
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Computer playoff option -->
 
-    <string name="playoff">Playoff</string>
+    <string name="playoff">Eliminatoria</string>
     <string name="playoff_distance">Distancia</string>
     <string name="playoff_min_score">Puntaje min por serie</string>
     <string name="playoff_max_score">Puntaje max por serie</string>
