--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,13 @@
     <string name="playoff_serie_score">%1$d - %2$d</string>
     <string name="playoff_error_creating_max_value_30">The value should be 30 or smaller</string>
     <string name="playoff_error_creating_min_greater_max">The min value shoudl be smaller or equal than the max</string>
+    <string name="playoff_view_stats">View stats</string>
+
+    <string name="playoff_stats_show">Update charts</string>
+    <string name="playoff_stats_from">From</string>
+    <string name="playoff_stats_to">To</string>
+    <string name="playoff_stats_arrow_stats"># of arrows per score</string>
+    <string name="playoff_stats_series_stats"># of series per score</string>
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Bow option -->
@@ -155,3 +162,4 @@
 
 
 </resources>
+
