--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,21 @@
     <string name="training_type_tournament">Tournament</string>
     <string name="training_type_retentions">Retentions</string>
 
+
+    <string name="stats_view">View stats</string>
+    <string name="stats_show">Update charts</string>
+    <string name="stats_from">From</string>
+    <string name="stats_to">To</string>
+    <string name="stats_arrow_stats"># of arrows per score</string>
+    <string name="stats_series_stats"># of series per score</string>
+    <string name="stats_arrow_table_data">Arrows data</string>
+    <string name="stats_series_table_data">Series data</string>
+    <string name="stats_series_table_datatype">Data</string>
+    <string name="stats_series_table_min">Min</string>
+    <string name="stats_series_table_avg">Avg</string>
+    <string name="stats_series_table_median">Median</string>
+    <string name="stats_series_table_max">Max</string>
+
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Things related to the add serie option -->
     <!-- String used when the user is going to load a new serie with information -->
@@ -141,15 +156,7 @@
     <string name="playoff_serie_score">%1$d - %2$d</string>
     <string name="playoff_error_creating_max_value_30">The value should be 30 or smaller</string>
     <string name="playoff_error_creating_min_greater_max">The min value shoudl be smaller or equal than the max</string>
-    <string name="playoff_view_stats">View stats</string>
 
-    <string name="playoff_stats_show">Update charts</string>
-    <string name="playoff_stats_from">From</string>
-    <string name="playoff_stats_to">To</string>
-    <string name="playoff_stats_arrow_stats"># of arrows per score</string>
-    <string name="playoff_stats_series_stats"># of series per score</string>
-    <string name="playoff_stats_arrow_table_data">Arrows data</string>
-    <string name="playoff_stats_series_table_data">Series data</string>
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Bow option -->
