--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -144,6 +144,12 @@
     <string name="playoff">Eliminatoria</string>
     <string name="playoff_distance">Distancia</string>
     <string name="playoff_opponent_name">Nombre del oponente</string>
+
+    <string name="playoff_opponent_type">Tipo de oponente</string>
+    <string name="playoff_opponent_type_computer">Computadora</string>
+    <string name="playoff_opponent_type_human">Humano</string>
+    <string name="playoff_opponent_score_required">Puntaje de serie del oponente</string>
+
     <string name="playoff_min_score">Puntaje min por serie</string>
     <string name="playoff_max_score">Puntaje max por serie</string>
     <string name="playoff_computer_name">Computadora</string>
