--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,18 +6,12 @@
 
     <string name="action_settings">Settings</string>
 
-    <!-- Today exercise left menu options -->
-
-
-    <string name="leftMenuTodayRawData">Raw data</string>
-    <string name="leftMenuRetentions">Retentions</string>
-    <string name="leftMenuTournament">Tournament</string>
-
     <!-- ////////////////////////////////////////////////////////////////////////// -->
     <string name="commonRequiredValidationError">Required</string>
     <string name="commonDelete">Delete</string>
     <string name="common_confirmation_dialog_title">Confirmation</string>
     <string name="common_container_stats_showing_series">Serie %1$d to %2$d</string>
+    <string name="common_help">Help</string>
 
     <!-- training type translation -->
     <string name="training_type_free">Free training</string>
@@ -39,6 +33,48 @@
     <string name="stats_series_table_avg">Avg</string>
     <string name="stats_series_table_median">Median</string>
     <string name="stats_series_table_max">Max</string>
+
+    <!-- ////////////////////////////////////////////////////////////////////////// -->
+    <!-- String used on the main action -->
+
+    <string name="main_series">Series</string>
+    <string name="main_retentions">Retentions</string>
+    <string name="main_tournament">Tournament</string>
+    <string name="main_playoff">Playoff</string>
+    <string name="main_bow">Bow</string>
+
+    <string name="main_help">
+        <![CDATA[
+        <html>
+        <body>
+        <p>
+            <strong>Series</strong>: can view the number of arrows shoot on any given period or used
+            to load free training arrows
+        </p>
+
+        <p>
+            <strong>Retentions</strong>: exercise were you have to keep the bow open for a given
+            number of seconds and then rest the same number of seconds
+        </p>
+        <p>
+            <strong>Tournament</strong>:where can you load the tournament information (for real
+            tournaments or the practice ones)
+        </p>
+
+        <p>
+            <strong>Playoff</strong>: used to practice playoff. You could do it against
+            the computer or against another human
+        </p>
+        <p>
+            <strong>Bow</strong>: used to save the basic sight information of the bow
+        </p>
+
+        </body>
+        </html>
+
+        ]]>
+    </string>
+
 
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Things related to the add serie option -->
@@ -73,6 +109,25 @@
     <!-- Today raw data -->
     <string name="todayRawDataDelete">Delete</string>
 
+    <string name="series_help">
+        <![CDATA[
+        <html>
+        <body>
+        <p>
+            Used to show the number of arrows shot at the difference distances. So you can check
+            the number of shots done during today, week, month, etc...
+        </p>
+        <p>
+            When using tournaments, or playoff the series are already loaded so you do not
+            have to do that manually.
+        </p>
+        </body>
+        </html>
+
+        ]]>
+    </string>
+
+
     <!-- ///////////////////////////////////////////////////////////////////////////// -->
     <!-- Different texts used on the retentions window -->
 
@@ -83,14 +138,14 @@
     <string name="startIn">Start in</string>
     <string name="buttonStart">Start</string>
 
-    <!-- Text usados en la pantalla de cuando empieza todo -->
+    <!-- Used to configure the retention -->
     <string name="button_stop">Stop</string>
     <string name="wait_time">Resting time</string>
     <string name="serieInfo">Current serie</string>
     <string name="repetitionsInfo">Current repetition</string>
     <string name="status">Status</string>
 
-    <!-- Differentes estados en el que se puede encontrar la applicacion -->
+    <!-- Different status of the retention -->
     <string name="runningStatus">Open bow</string>
     <string name="restStatus">Resting</string>
     <string name="stoppedStatus">Stop</string>
@@ -172,6 +227,7 @@
     <string name="bow_distance">Distance</string>
     <string name="bow_distance_delete">Delete</string>
     <string name="bow_sight_value">Sight value</string>
+
 
 
 
